# PureChat

./: README.md
Client/: client.rkt
Server/: Main.hs  purechat.cabal  stack.yaml
Server/Database/: Message.hs
Server/Database/Internal/: Model.hs
server/: purechat.cabal
server/Database/: Message.hs
