name:          purechat
version:       0.0.1
cabal-version: >= 1.8
build-type:    Simple
License:       GPL
License-File:  LICENSE
Author:		Ltaoist, Zebralan, Z.Y.
Homepage:	http://sapphiresoft.io
Category:	chat

executable          pure
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
                  , ScopedTypeVariables
    build-depends:  base   >= 4      && < 5
                  , text
                  , time
                  , aeson
                  , http-client
                  , bytestring
                  , persistent
                  , persistent-template
                  , persistent-sqlite
                  , websockets

                  
    other-modules:  Database.Internal.Model
                  , Database.Message

    default-language: Haskell2010
